--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="layout-container">
+<!-- <div class="layout-container">
   <app-topbar />
   <div class="layout-grid">
     <stats-widget />
@@ -9,4 +9,8 @@
     <product-overview-widget />
   </div>
   <app-footer />
-</div>
+</div> -->
+
+
+
+<app-nav-header />
