--- a/src/app/pages/introduction/introduction.component.html
+++ b/src/app/pages/introduction/introduction.component.html
@@ -1,4 +1,22 @@
-<section class="intro-wrapper">
-  <h1>Introduction</h1>
-  <app-slideshow-section></app-slideshow-section>
-</section>
+<app-slideshow-section>
+  <ng-template>
+    <div class="slide-content">
+      <h1>Welcome</h1>
+      <p>This is slide 1.</p>
+    </div>
+  </ng-template>
+
+  <ng-template>
+    <div class="slide-content">
+      <h2>Architecture</h2>
+      <img src="assets/diagram.png" />
+    </div>
+  </ng-template>
+
+  <ng-template>
+    <div class="slide-content">
+      <h2>Canvas Slide</h2>
+      <canvas width="600" height="400"></canvas>
+    </div>
+  </ng-template>
+</app-slideshow-section>
