add slide background animation

--- a/src/app/components/slideshow-section/slideshow-section.component.html
+++ b/src/app/components/slideshow-section/slideshow-section.component.html
@@ -1,3 +1,18 @@
+<div class="animated-bg">
+  <div class="squares">
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+  </div>
+</div>
+
 <div class="slideshow-wrapper">
   <div class="slide-track">
     @for (_ of slides; track $index; let i = $index) {
