add lottie animation

--- a/src/app/components/nav-header/nav-header.component.html
+++ b/src/app/components/nav-header/nav-header.component.html
@@ -1,4 +1,11 @@
-<header class="nav-header">
+<header class="nav-header flex-header">
+  <dotlottie-wc
+    src="https://lottie.host/ac579ea4-09e8-48e2-a5b1-eceb73656fbd/3OlrOdL33a.lottie"
+    autoplay
+    loop
+    mode="bounce"
+    style="width:72px;height:72px;margin-right:1rem;"
+  ></dotlottie-wc>
   <p-steps
     [model]="items"
     [readonly]="false"
