--- a/src/app/components/nav-header/nav-header.component.html
+++ b/src/app/components/nav-header/nav-header.component.html
@@ -1,14 +1,17 @@
 <header class="nav-header flex-header">
   <dotlottie-wc
-    src="https://lottie.host/ac579ea4-09e8-48e2-a5b1-eceb73656fbd/3OlrOdL33a.lottie"
+    #lottiePlayer
+    src="https://lottie.host/94ea7068-decd-41dd-b813-fd144462a294/CNUu7tjtaP.lottie"
     autoplay
     loop
     mode="bounce"
-    style="width:72px;height:72px;margin-right:1rem;"
+    style="width:60px;height:60px;margin-left: 40px;"
   ></dotlottie-wc>
-  <p-steps
-    [model]="items"
-    [readonly]="false"
-    styleClass="presentation-steps"
-  ></p-steps>
+  <div class="steps-flex-grow">
+    <p-steps
+      [model]="items"
+      [readonly]="false"
+      styleClass="presentation-steps"
+    ></p-steps>
+  </div>
 </header>
