create page component architecture

--- a/src/app/components/nav-header/nav-header.component.html
+++ b/src/app/components/nav-header/nav-header.component.html
@@ -1,6 +1,7 @@
 <header class="nav-header flex-header">
   <dotlottie-wc #lottiePlayer src="https://lottie.host/94ea7068-decd-41dd-b813-fd144462a294/CNUu7tjtaP.lottie" autoplay
-    loop mode="bounce" style="width:60px;height:60px;margin:0px 50px;"></dotlottie-wc>
+    loop mode="bounce"
+    style="width:60px;height:60px;margin:0px 0px;margin-left: 30px;margin-right: 10px;"></dotlottie-wc>
   <div class="steps-flex-grow">
     <p-steps [model]="items" [readonly]="false" styleClass="presentation-steps"></p-steps>
   </div>
