--- a/src/styles.scss
+++ b/src/styles.scss
@@ -590,7 +590,7 @@ body {
   /* Make active number text white (or any contrast color) */
   --p-steps-item-number-active-color: #004254;
   /* Optional: change active border color */
-//   --p-steps-item-number-active-border-color: #004254;
+   --p-steps-item-number-active-border-color: #E3E2DA;
 
   --p-steps-item-number-border-color: #E3E2DA;
   /* Change active label color */
