--- a/src/app/components/nav-header/nav-header.component.scss
+++ b/src/app/components/nav-header/nav-header.component.scss
@@ -27,3 +27,11 @@
   }
 }
 
+.lottie-logo{
+  width:60px;
+  height:60px;
+  margin:0px 0px;
+  margin-left: 30px;
+  margin-right: 10px;
+  cursor: pointer;
+}
