add chapter transition animations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,4 +14,7 @@
 
 
 <app-nav-header />
-<router-outlet></router-outlet>
+
+<div class="route-container" [@routeAnimations]="prepareRoute(outlet)">
+  <router-outlet #outlet="outlet"></router-outlet>
+</div>
