--- a/src/app/pages/introduction/introduction.component.html
+++ b/src/app/pages/introduction/introduction.component.html
@@ -17,7 +17,7 @@
   <ng-template>
     <div class="slide-content">
       <h2>Architecture</h2>
-      <img src="assets/diagram.png" />
+      <!-- <img src="assets/diagram.png" /> -->
     </div>
   </ng-template>
 
