add header separator

--- a/src/app/components/nav-header/nav-header.component.html
+++ b/src/app/components/nav-header/nav-header.component.html
@@ -2,6 +2,9 @@
   <dotlottie-wc #lottiePlayer class="lottie-logo"
     src="https://lottie.host/94ea7068-decd-41dd-b813-fd144462a294/CNUu7tjtaP.lottie" autoplay loop mode="bounce"
     (click)="goHome()"></dotlottie-wc>
+
+  <div class="nav-separator"></div>
+
   <div class="steps-flex-grow">
     <p-steps [model]="items" [readonly]="false" styleClass="presentation-steps"></p-steps>
   </div>
