--- a/src/app/components/nav-header/nav-header.component.scss
+++ b/src/app/components/nav-header/nav-header.component.scss
@@ -7,8 +7,8 @@
   background: rgba(255, 255, 255, 0.7);
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-  padding: 0.5rem 1rem;
-  padding-top: 1rem;
+  padding: 1rem 1rem;
+  // padding-top: 1rem;
 
 }
 
@@ -20,10 +20,11 @@
 .steps-flex-grow {
   flex: 1;
   align-items: center;
+  overflow-x: scroll;
 
   .presentation-steps {
     width: 100%;
-    min-width: 700px;
+    // min-width: 700px;
   }
 }
 
@@ -31,7 +32,19 @@
   width:60px;
   height:60px;
   margin:0px 0px;
-  margin-left: 30px;
-  margin-right: 10px;
+  // margin-left: 30px;
+  // margin-right: 10px;
+  margin: 0px 10px;
   cursor: pointer;
+}
+
+
+.nav-separator {
+  width: 1px;
+  height: 50px;
+  // background: rgba(0,0,0,0.1);
+  background: linear-gradient(to bottom, rgba(0,0,0,0.1), rgba(0,0,0,0.05));
+  margin: 0 20px;
+  border-radius: 1px;
+  transition: background 0.3s ease;
 }
