add home screen. change background scope to app component. fix header styles. revert background square color.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,9 +12,26 @@
 </div> -->
 
 
-
 <app-nav-header />
+
+
 
 <div class="route-container" [@routeAnimations]="prepareRoute(outlet)">
   <router-outlet #outlet="outlet"></router-outlet>
+</div>
+
+
+<div class="animated-bg">
+  <div class="squares">
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+  </div>
 </div>
