--- a/src/app/components/nav-header/nav-header.component.scss
+++ b/src/app/components/nav-header/nav-header.component.scss
@@ -20,7 +20,7 @@
 .steps-flex-grow {
   flex: 1;
   align-items: center;
-  overflow-x: scroll;
+  // overflow-x: scroll;
 
   .presentation-steps {
     width: 100%;
