--- a/src/app/components/slideshow-section/slideshow-section.component.html
+++ b/src/app/components/slideshow-section/slideshow-section.component.html
@@ -1,4 +1,4 @@
-<div class="animated-bg">
+<!-- <div class="animated-bg">
   <div class="squares">
     <div class="square"></div>
     <div class="square"></div>
@@ -11,7 +11,7 @@
     <div class="square"></div>
     <div class="square"></div>
   </div>
-</div>
+</div> -->
 
 <div class="slideshow-wrapper">
   <div class="slide-track">
