--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,14 @@
-<p>home works!</p>
+<div class="slide-home-cv">
+  <h1 class="cv-title">Computer Vision for Automated Quality Control: Defect Detection in Metallurgical Processes using Deep Learning.
+</h1>
+  <div class="cv-author">León E. Prieto Bailo</div>
+  <div class="cv-email">contact&#64;leonprieto.com</div>
+  <div class="cv-date">
+    <span>June 2025</span>
+  </div>
+  <div class="cv-underline"></div>
+
+  <button class="intro-btn" (click)="goIntro()">
+    Introduction <span class="arrow">→</span>
+  </button>
+</div>
