refactor general slide styling. add introduction contents.

--- a/src/app/components/slideshow-section/slideshow-section.component.scss
+++ b/src/app/components/slideshow-section/slideshow-section.component.scss
@@ -1,3 +1,5 @@
+@use '../../../styles/colors.scss' as c;
+
 .slideshow-wrapper {
   position: relative;
   width: 100vw;
@@ -71,7 +73,7 @@
       font-size: 0;
 
       &.active {
-        background-color: #00B0BD;
+        background-color: c.$cv-secondary;
       }
     }
   }
