--- a/src/app/pages/introduction/introduction.component.html
+++ b/src/app/pages/introduction/introduction.component.html
@@ -1,30 +1,71 @@
 <app-slideshow-section>
   <ng-template>
-    <div class="slide-content split-slide">
+    <div class="slide-content">
+<div class="split-slide">
       <div class="text-column">
-        <h1>Model Overview</h1>
+        <h1>Introduction</h1>
         <p>
-          This model leverages the power of YOLOv8 for segmentation combined with a custom TensorFlow classifier.
-          The architecture is optimized for real-time processing and adaptable for various domains.
+          In all modern manufacturing processes, it is essential to observe and validate the condition of components at
+          the output stage. This validation not only ensures the integrity of the physical elements, but also enables
+          the extraction of valuable contextual information about the entire production chain—ranging from raw materials
+          to the influence of external factors such as personnel and machinery.
+        </p>
+        <p>
+          Within the framework of Industry 4.0, this necessity translates into the demand for enhanced quality control
+          techniques capable of meeting increasingly stringent standards. In this context, and driven by rapid
+          advancements in processing hardware, computer vision has emerged as a powerful and viable solution.
+        </p>
+        <p>
+          Computer vision refers to a set of techniques for acquiring, processing, analyzing, and interpreting images of
+          the real world in order to generate discrete information that can be processed by digital systems.
         </p>
       </div>
       <div class="image-column">
-        <img src="assets/images/cat.png" alt="Model Diagram" />
+        <img src="assets/images/intro_industry40.png" alt="Model Diagram" />
       </div>
+    </div>
     </div>
   </ng-template>
 
   <ng-template>
     <div class="slide-content">
-      <h2>Architecture</h2>
-      <!-- <img src="assets/diagram.png" /> -->
+      <div class="split-slide">
+        <div class="text-column">
+          <h1>Motivation</h1>
+          <p>
+            As manufacturing systems evolve toward full automation, the need for faster, more reliable quality
+            inspection
+            methods becomes increasingly critical. Manual inspections are often subjective and inconsistent, while
+            traditional rule-based vision systems struggle with subtle or previously unseen defects.
+          </p>
+          <p>
+            Automating defect detection using computer vision addresses these limitations by improving inspection speed,
+            accuracy, and repeatability. This is particularly vital in high-stakes industries such as aerospace,
+            automotive, and pharmaceuticals, where undetected defects can result in costly recalls and safety hazards.
+          </p>
+          <p>
+            Modern computer vision techniques enable real-time, pixel-level analysis, reducing waste and ensuring
+            compliance with rigorous quality standards. These capabilities align closely with the goals of Industry 4.0,
+            making automated visual inspection a strategic priority for contemporary manufacturing.
+          </p>
+        </div>
+        <div class="image-column">
+          <img src="assets/images/intro_blade_defect.png" alt="Model Diagram" />
+        </div>
+      </div>
+      <div class="next-btn-div">
+        <button class="next-btn" (click)="goNext()">
+          YOLO Classification <span class="arrow">→</span>
+        </button>
+      </div>
     </div>
   </ng-template>
 
-  <ng-template>
+
+  <!-- <ng-template>
     <div class="slide-content">
       <h2>Canvas Slide</h2>
       <canvas width="600" height="400"></canvas>
     </div>
-  </ng-template>
+  </ng-template> -->
 </app-slideshow-section>
