--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 @use "primeicons/primeicons.css";
+// @import "../node_modules/prismjs/themes/prism.css";
+// @import "prismjs/themes/prism.css";
 
 html {
     box-sizing: border-box;
