--- a/src/app/pages/dataset/dataset.component.html
+++ b/src/app/pages/dataset/dataset.component.html
@@ -21,7 +21,7 @@
                     </p>
                 </div>
                 <div class="image-column">
-                    <img src="assets/images/intro_industry40.png" alt="Model Diagram" />
+                    <app-tree-table></app-tree-table>
                 </div>
             </div>
         </div>
