--- a/src/app/pages/dataset/dataset.component.scss
+++ b/src/app/pages/dataset/dataset.component.scss
@@ -10,3 +10,25 @@
 .class-label.def {
     color: #DC2626;
 }
+
+.grid-wrapper {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // padding: 40px;
+}
+
+.image-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 16px;
+}
+
+.image-grid img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    object-fit: cover;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
